@@ -1,5 +1,5 @@
 % latex table generated in R 3.4.0 by xtable 1.8-2 package
-% Thu Jun 23 15:45:38 2016
+% Fri Jun 24 13:36:39 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
